fixed overlapping labels

--- a/ckanext/querytool/fanstatic/less/inc/responsive.less
+++ b/ckanext/querytool/fanstatic/less/inc/responsive.less
@@ -231,13 +231,13 @@
 
   .c3-axis-y text
   {
-    font-size: 10px;
+    font-size: 8px;
     font-weight: 300;
   }
 
   .c3-axis-x text
   {
-    font-size: 10px;
+    font-size: 9px;
     font-weight: 300;
   }
 }
