--- a/ckanext/querytool/fanstatic/less/main.less
+++ b/ckanext/querytool/fanstatic/less/main.less
@@ -59,3 +59,14 @@
 .accordion-opened .accordion-toggle:after {    
     content: "\f054";    
 }
+.c3-axis-y text
+{
+    font-size: 11px;
+    font-weight:800;
+}
+
+.c3-axis-x text
+{
+    font-size: 11px;
+    font-weight:800;
+}
